# livekit-rag-voice-agent-demo

./: .gitignore  README.md  env.example  livekit.toml  pyproject.toml  requirements.txt  test_input_devices.py
.github/workflows/: template-check.yml  tests.yml
src/: agent.py  assistant_prompt.yaml
