[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-rag-voice-agent-demo"
version = "1.0.0"
description = "RAG-powered voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10,<3.13"

dependencies = [
    "livekit-agents[google,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "pyyaml",
    "requests",
    "llama-index>=0.10",
    "llama-index-core",
    "llama-index-embeddings-vertex",
    "llama-index-vector-stores-qdrant",
    "llama-index-llms-google-genai",
    "qdrant-client",
    "livekit-agents",
    "livekit"

]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
